Updated logo, icon and moved intro from old to new website

--- a/index.html
+++ b/index.html
@@ -4,12 +4,33 @@ search_exclude: true
 image: images/logo.png
 ---
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
+# Data science projects
 
-![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
+WaiDatathon 2021 (🥇 1st place), [blogpost](https://abauville.github.io/blog/supervised%20learning/eda/competition/2021/04/21/wai-datathon.html), [repository](https://github.com/abauville/wai_hackathon_2021): I led the team to victory in the WaiDatathon 2021 on the theme "Combat domestic violence with data and AI". We presented an exploratory data analysis and a method to produce personalized domestic violence detection questionnaires based on a classification tree.
 
-[fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
+# Scientific simulation software
 
-You can edit the `index.html` file to change this content.
+[Sunaba](https://github.com/abauville/Sunaba): 2D simulation of geodynamical thermomechanical processes based on the finite difference method. Written in C, Python and OpenGL.
+
+[geomIO](https://geomio.bitbucket.io/): 3D geometric modeling from serial 2D drawings. Used to initialize numerical simulations. Written in MATLAB.
+
+[CriticalTaper-utils](https://github.com/abauville/CriticalTaper-utils): Python scripts to compute and visualize the solutions of the critical taper theory.
+
+[FortyTwoFEM](https://github.com/abauville/FortyTwoFEM): A fluid mechanics solver based on the finite element method. Written in Matlab.
+
+[SPH_solver](https://github.com/abauville/SPH_python_solver): a fluid dynamics solver based on the smoothed-particle hydrodynamics (SPH) method. Written in Python and optimized with Numba.
+
+# CV
+
+[CV](./Doc/CV.pdf)
+
+# Social media
+
+[Github](https://github.com/abauville/)
+
+[Google scholar](https://scholar.google.com/citations?user=ebIAXVwAAAAJ&hl=en)
+
+[ResearchGate](https://www.researchgate.net/profile/Arthur_Bauville)
+
 
 # Posts
