--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@ image: images/logo.png
 
 # Data science projects
 
-WaiDatathon 2021 (🥇 1st place), [blogpost](https://abauville.github.io/blog/supervised%20learning/eda/competition/2021/04/21/wai-datathon.html), [repository](https://github.com/abauville/wai_hackathon_2021): I led the team to victory in the WaiDatathon 2021 on the theme "Combat domestic violence with data and AI". We presented an exploratory data analysis and a method to produce personalized domestic violence detection questionnaires based on a classification tree.
+**WaiDatathon 2021 🥇** ([blogpost](https://abauville.github.io/blog/supervised%20learning/eda/competition/2021/04/21/wai-datathon.html), [repository](https://github.com/abauville/wai_hackathon_2021)): I led the team to victory in the WaiDatathon 2021 on the theme "Combat domestic violence with data and AI". We presented an exploratory data analysis and a method to produce personalized domestic violence detection questionnaires based on a classification tree.
 
 # Scientific simulation software
 
-[Sunaba](https://github.com/abauville/Sunaba): 2D simulation of geodynamical thermomechanical processes based on the finite difference method. Written in C, Python and OpenGL.
+[**Sunaba**](https://github.com/abauville/Sunaba): 2D simulation of geodynamical thermomechanical processes based on the finite difference method. Written in C, Python and OpenGL.
 
-[geomIO](https://geomio.bitbucket.io/): 3D geometric modeling from serial 2D drawings. Used to initialize numerical simulations. Written in MATLAB.
+[**geomIO**](https://geomio.bitbucket.io/): 3D geometric modeling from serial 2D drawings. Used to initialize numerical simulations. Written in MATLAB.
 
-[CriticalTaper-utils](https://github.com/abauville/CriticalTaper-utils): Python scripts to compute and visualize the solutions of the critical taper theory.
+[**CriticalTaper-utils**](https://github.com/abauville/CriticalTaper-utils): Python scripts to compute and visualize the solutions of the critical taper theory.
 
-[FortyTwoFEM](https://github.com/abauville/FortyTwoFEM): A fluid mechanics solver based on the finite element method. Written in Matlab.
+[**FortyTwoFEM**](https://github.com/abauville/FortyTwoFEM): A fluid mechanics solver based on the finite element method. Written in Matlab.
 
-[SPH_solver](https://github.com/abauville/SPH_python_solver): a fluid dynamics solver based on the smoothed-particle hydrodynamics (SPH) method. Written in Python and optimized with Numba.
+[**SPH_solver**](https://github.com/abauville/SPH_python_solver): a fluid dynamics solver based on the smoothed-particle hydrodynamics (SPH) method. Written in Python and optimized with Numba.
 
 # CV
 
