deploy: 4d4bc9c07d6e0f502a4858a634bd3848d7e58d04

--- a/index.html
+++ b/index.html
@@ -99,9 +99,7 @@ window.onload = wrap_img;
 
 <p><a href="https://github.com/abauville/SPH_python_solver"><strong>SPH_solver</strong></a>: a fluid dynamics solver based on the smoothed-particle hydrodynamics (SPH) method. Written in Python and optimized with Numba.</p>
 
-<h1 id="cv">CV</h1>
-
-<p><a href="./Doc/CV.pdf">CV</a></p>
+<h1 id="cv"><a href="https://abauville.github.io/blog/about/">CV</a></h1>
 
 <h1 id="social-media">Social media</h1>
 
