bulleted list for projects

--- a/index.html
+++ b/index.html
@@ -10,26 +10,21 @@ image: images/logo.png
 
 # Scientific simulation software
 
-[**Sunaba**](https://github.com/abauville/Sunaba): 2D simulation of geodynamical thermomechanical processes based on the finite difference method. Written in C, Python and OpenGL.
-
-[**geomIO**](https://geomio.bitbucket.io/): 3D geometric modeling from serial 2D drawings. Used to initialize numerical simulations. Written in MATLAB.
-
-[**CriticalTaper-utils**](https://github.com/abauville/CriticalTaper-utils): Python scripts to compute and visualize the solutions of the critical taper theory.
-
-[**FortyTwoFEM**](https://github.com/abauville/FortyTwoFEM): A fluid mechanics solver based on the finite element method. Written in Matlab.
-
-[**SPH_solver**](https://github.com/abauville/SPH_python_solver): a fluid dynamics solver based on the smoothed-particle hydrodynamics (SPH) method. Written in Python and optimized with Numba.
+- [**Sunaba**](https://github.com/abauville/Sunaba): 2D simulation of geodynamical thermomechanical processes based on the finite difference method. Written in C, Python and OpenGL.
+- [**geomIO**](https://geomio.bitbucket.io/): 3D geometric modeling from serial 2D drawings. Used to initialize numerical simulations. Written in MATLAB.
+- [**CriticalTaper-utils**](https://github.com/abauville/CriticalTaper-utils): Python scripts to compute and visualize the solutions of the critical taper theory.
+- [**FortyTwoFEM**](https://github.com/abauville/FortyTwoFEM): A fluid mechanics solver based on the finite element method. Written in Matlab.
+- [**SPH_solver**](https://github.com/abauville/SPH_python_solver): a fluid dynamics solver based on the smoothed-particle hydrodynamics (SPH) method. Written in Python and optimized with Numba.
 
 # [CV](https://abauville.github.io/blog/about/)
 
 
 # Social media
 
-[Github](https://github.com/abauville/)
-
-[Google scholar](https://scholar.google.com/citations?user=ebIAXVwAAAAJ&hl=en)
-
-[ResearchGate](https://www.researchgate.net/profile/Arthur_Bauville)
+- [Github](https://github.com/abauville/)
+- [LinkedIn](https://www.linkedin.com/in/arthur-bauville-a734871ba/)
+- [Google scholar](https://scholar.google.com/citations?user=ebIAXVwAAAAJ&hl=en)
+- [ResearchGate](https://www.researchgate.net/profile/Arthur_Bauville)
 
 
 # Posts
