--- a/index.html
+++ b/index.html
@@ -89,25 +89,24 @@ window.onload = wrap_img;
 
 <h1 id="scientific-simulation-software">Scientific simulation software</h1>
 
-<p><a href="https://github.com/abauville/Sunaba"><strong>Sunaba</strong></a>: 2D simulation of geodynamical thermomechanical processes based on the finite difference method. Written in C, Python and OpenGL.</p>
-
-<p><a href="https://geomio.bitbucket.io/"><strong>geomIO</strong></a>: 3D geometric modeling from serial 2D drawings. Used to initialize numerical simulations. Written in MATLAB.</p>
-
-<p><a href="https://github.com/abauville/CriticalTaper-utils"><strong>CriticalTaper-utils</strong></a>: Python scripts to compute and visualize the solutions of the critical taper theory.</p>
-
-<p><a href="https://github.com/abauville/FortyTwoFEM"><strong>FortyTwoFEM</strong></a>: A fluid mechanics solver based on the finite element method. Written in Matlab.</p>
-
-<p><a href="https://github.com/abauville/SPH_python_solver"><strong>SPH_solver</strong></a>: a fluid dynamics solver based on the smoothed-particle hydrodynamics (SPH) method. Written in Python and optimized with Numba.</p>
+<ul>
+  <li><a href="https://github.com/abauville/Sunaba"><strong>Sunaba</strong></a>: 2D simulation of geodynamical thermomechanical processes based on the finite difference method. Written in C, Python and OpenGL.</li>
+  <li><a href="https://geomio.bitbucket.io/"><strong>geomIO</strong></a>: 3D geometric modeling from serial 2D drawings. Used to initialize numerical simulations. Written in MATLAB.</li>
+  <li><a href="https://github.com/abauville/CriticalTaper-utils"><strong>CriticalTaper-utils</strong></a>: Python scripts to compute and visualize the solutions of the critical taper theory.</li>
+  <li><a href="https://github.com/abauville/FortyTwoFEM"><strong>FortyTwoFEM</strong></a>: A fluid mechanics solver based on the finite element method. Written in Matlab.</li>
+  <li><a href="https://github.com/abauville/SPH_python_solver"><strong>SPH_solver</strong></a>: a fluid dynamics solver based on the smoothed-particle hydrodynamics (SPH) method. Written in Python and optimized with Numba.</li>
+</ul>
 
 <h1 id="cv"><a href="https://abauville.github.io/blog/about/">CV</a></h1>
 
 <h1 id="social-media">Social media</h1>
 
-<p><a href="https://github.com/abauville/">Github</a></p>
-
-<p><a href="https://scholar.google.com/citations?user=ebIAXVwAAAAJ&amp;hl=en">Google scholar</a></p>
-
-<p><a href="https://www.researchgate.net/profile/Arthur_Bauville">ResearchGate</a></p>
+<ul>
+  <li><a href="https://github.com/abauville/">Github</a></li>
+  <li><a href="https://www.linkedin.com/in/arthur-bauville-a734871ba/">LinkedIn</a></li>
+  <li><a href="https://scholar.google.com/citations?user=ebIAXVwAAAAJ&amp;hl=en">Google scholar</a></li>
+  <li><a href="https://www.researchgate.net/profile/Arthur_Bauville">ResearchGate</a></li>
+</ul>
 
 <h1 id="posts">Posts</h1>
 
