fixed missing bullet

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ image: images/logo.png
 
 # Data science projects
 
-**WaiDatathon 2021 🥇** ([blogpost](https://abauville.github.io/blog/supervised%20learning/eda/competition/2021/04/21/wai-datathon.html), [repository](https://github.com/abauville/wai_hackathon_2021)): I led the team to victory in the WaiDatathon 2021 on the theme "Combat domestic violence with data and AI". We presented an exploratory data analysis and a method to produce personalized domestic violence detection questionnaires based on a classification tree.
+- **WaiDatathon 2021 🥇** ([blogpost](https://abauville.github.io/blog/supervised%20learning/eda/competition/2021/04/21/wai-datathon.html), [repository](https://github.com/abauville/wai_hackathon_2021)): I led the team to victory in the WaiDatathon 2021 on the theme "Combat domestic violence with data and AI". We presented an exploratory data analysis and a method to produce personalized domestic violence detection questionnaires based on a classification tree.
 
 # Scientific simulation software
 
