updated resume link on homepage

--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@ image: images/logo.png
 - [**FortyTwoFEM**](https://github.com/abauville/FortyTwoFEM): A fluid mechanics solver based on the finite element method. Written in Matlab.
 - [**SPH_solver**](https://github.com/abauville/SPH_python_solver): a fluid dynamics solver based on the smoothed-particle hydrodynamics (SPH) method. Written in Python and optimized with Numba.
 
-# [CV](https://abauville.github.io/blog/about/)
-
-
 # Social media
 
 - [Github](https://github.com/abauville/)
@@ -26,5 +23,6 @@ image: images/logo.png
 - [Google scholar](https://scholar.google.com/citations?user=ebIAXVwAAAAJ&hl=en)
 - [ResearchGate](https://www.researchgate.net/profile/Arthur_Bauville)
 
+# [Resume](https://github.com/abauville/blog/raw/master/images/CV/CV_Arthur_Bauville.pdf)
 
 # Posts
