--- a/index.html
+++ b/index.html
@@ -99,8 +99,6 @@ window.onload = wrap_img;
   <li><a href="https://github.com/abauville/SPH_python_solver"><strong>SPH_solver</strong></a>: a fluid dynamics solver based on the smoothed-particle hydrodynamics (SPH) method. Written in Python and optimized with Numba.</li>
 </ul>
 
-<h1 id="cv"><a href="https://abauville.github.io/blog/about/">CV</a></h1>
-
 <h1 id="social-media">Social media</h1>
 
 <ul>
@@ -109,6 +107,8 @@ window.onload = wrap_img;
   <li><a href="https://scholar.google.com/citations?user=ebIAXVwAAAAJ&amp;hl=en">Google scholar</a></li>
   <li><a href="https://www.researchgate.net/profile/Arthur_Bauville">ResearchGate</a></li>
 </ul>
+
+<h1 id="resume"><a href="https://github.com/abauville/blog/raw/master/images/CV/CV_Arthur_Bauville.pdf">Resume</a></h1>
 
 <h1 id="posts">Posts</h1>
 
