Added a picture of myself

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ search_exclude: true
 image: images/logo.png
 ---
 
+![That's my face!](https://github.com/abauville/blog/raw/master/images/ID_pic.jpg)
+
 # Data science projects
 
 - **WaiDatathon 2021 🥇** ([blogpost](https://abauville.github.io/blog/supervised%20learning/eda/competition/2021/04/21/wai-datathon.html), [repository](https://github.com/abauville/wai_hackathon_2021)): I led the team to victory in the WaiDatathon 2021 on the theme "Combat domestic violence with data and AI". We presented an exploratory data analysis and a method to produce personalized domestic violence detection questionnaires based on a classification tree.
@@ -22,6 +24,7 @@ image: images/logo.png
 - [LinkedIn](https://www.linkedin.com/in/arthur-bauville-a734871ba/)
 - [Google scholar](https://scholar.google.com/citations?user=ebIAXVwAAAAJ&hl=en)
 - [ResearchGate](https://www.researchgate.net/profile/Arthur_Bauville)
+- [Medium](https://medium.com/@abauville)
 
 # [Resume](https://github.com/abauville/blog/raw/master/images/CV/CV_Arthur_Bauville.pdf)
 
