change image format to png

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ search_exclude: true
 image: images/logo.png
 ---
 
-![That's my face!](https://github.com/abauville/blog/raw/master/images/ID_pic.jpg)
+![That's my face!](https://github.com/abauville/blog/raw/master/images/ID_pic.png)
 
 # Data science projects
 
