deploy: 915d61194377c82fd68d5f37eb20a027a74d98ad

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p><img src="https://github.com/abauville/blog/raw/master/images/ID_pic.jpg" alt="That's my face!" /></p>
+        <div class="home"><p><img src="https://github.com/abauville/blog/raw/master/images/ID_pic.png" alt="That's my face!" /></p>
 
 <h1 id="data-science-projects">Data science projects</h1>
 
