--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@ search_exclude: true
 image: images/logo.png
 ---
 
-![That's my face!](https://github.com/abauville/blog/raw/master/images/ID_pic.png)
+
+<img src="https://github.com/abauville/blog/raw/master/images/ID_pic.png" alt="That's my face" width="200"/>
 
 # Data science projects
 
