moved about me inside the index page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@ image: images/logo.png
 ---
 
 
-<img src="https://github.com/abauville/blog/raw/master/images/ID_pic.png" alt="That's my face" width="200"/>
+<img src="https://github.com/abauville/blog/raw/master/images/ID_pic.png" alt="That's my face" width="200"/ style="float: left;">
+
+# About me
+
+I am researcher in computation Earth sciences passionate about data science, machine learning, physics and simulations. I am currently living and working in Yokohama, Japan. For more details have a look at my [resume](https://nbviewer.jupyter.org/github/abauville/blog/raw/master/images/Resume/Resume_Arthur_Bauville.pdf), or my [publications]("https://abauville.github.io/blog/publications/").
+
 
 # Data science projects
 
@@ -21,12 +26,6 @@ image: images/logo.png
 
 # Social media
 
-- [Github](https://github.com/abauville/)
-- [LinkedIn](https://www.linkedin.com/in/arthur-bauville-a734871ba/)
-- [Google scholar](https://scholar.google.com/citations?user=ebIAXVwAAAAJ&hl=en)
-- [ResearchGate](https://www.researchgate.net/profile/Arthur_Bauville)
-- [Medium](https://medium.com/@abauville)
-
-# [Resume](https://github.com/abauville/blog/raw/master/images/CV/CV_Arthur_Bauville.pdf)
+[Github](https://github.com/abauville/), [LinkedIn](https://www.linkedin.com/in/arthur-bauville-a734871ba/), [Google scholar](https://scholar.google.com/citations?user=ebIAXVwAAAAJ&hl=en), [ResearchGate](https://www.researchgate.net/profile/Arthur_Bauville), [Medium](https://medium.com/@abauville)
 
 # Posts
