--- a/index.html
+++ b/index.html
@@ -98,7 +98,11 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p><img src="https://github.com/abauville/blog/raw/master/images/ID_pic.png" alt="That's my face" width="200" /></p>
+        <div class="home"><p>&lt;img src=”https://github.com/abauville/blog/raw/master/images/ID_pic.png” alt=”That’s my face” width=”200”/ style=”float: left;”&gt;</p>
+
+<h1 id="about-me">About me</h1>
+
+<p>I am researcher in computation Earth sciences passionate about data science, machine learning, physics and simulations. I am currently living and working in Yokohama, Japan. For more details have a look at my <a href="https://nbviewer.jupyter.org/github/abauville/blog/raw/master/images/Resume/Resume_Arthur_Bauville.pdf">resume</a>, or my <a href="&quot;https://abauville.github.io/blog/publications/&quot;">publications</a>.</p>
 
 <h1 id="data-science-projects">Data science projects</h1>
 
@@ -118,15 +122,7 @@ window.onload = wrap_img;
 
 <h1 id="social-media">Social media</h1>
 
-<ul>
-  <li><a href="https://github.com/abauville/">Github</a></li>
-  <li><a href="https://www.linkedin.com/in/arthur-bauville-a734871ba/">LinkedIn</a></li>
-  <li><a href="https://scholar.google.com/citations?user=ebIAXVwAAAAJ&amp;hl=en">Google scholar</a></li>
-  <li><a href="https://www.researchgate.net/profile/Arthur_Bauville">ResearchGate</a></li>
-  <li><a href="https://medium.com/@abauville">Medium</a></li>
-</ul>
-
-<h1 id="resume"><a href="https://github.com/abauville/blog/raw/master/images/CV/CV_Arthur_Bauville.pdf">Resume</a></h1>
+<p><a href="https://github.com/abauville/">Github</a>, <a href="https://www.linkedin.com/in/arthur-bauville-a734871ba/">LinkedIn</a>, <a href="https://scholar.google.com/citations?user=ebIAXVwAAAAJ&amp;hl=en">Google scholar</a>, <a href="https://www.researchgate.net/profile/Arthur_Bauville">ResearchGate</a>, <a href="https://medium.com/@abauville">Medium</a></p>
 
 <h1 id="posts">Posts</h1>
 
