fix img float property

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ image: images/logo.png
 ---
 
 
-<img src="https://github.com/abauville/blog/raw/master/images/ID_pic.png" alt="That's my face" width="200"/ style="float: left;">
+<img src="https://github.com/abauville/blog/raw/master/images/ID_pic.png" alt="That's my face" width="200" style="float: left;">
 
 # About me
 
