deploy: c2cea344cef791daddaa99bcd43122fda69d1103

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>&lt;img src=”https://github.com/abauville/blog/raw/master/images/ID_pic.png” alt=”That’s my face” width=”200”/ style=”float: left;”&gt;</p>
+        <div class="home"><p><img src="https://github.com/abauville/blog/raw/master/images/ID_pic.png" alt="That's my face" width="200" style="float: left;" /></p>
 
 <h1 id="about-me">About me</h1>
 
