commented out the unused pages

--- a/unused_pages/search.html
+++ b/unused_pages/search.html
@@ -1,4 +1,4 @@
----
+<!-- ---
 layout: default
 permalink: /search/
 title: Search
@@ -15,4 +15,4 @@ search_exclude: true
     </div>
     <br>
     <div class="js-search-results search-results-wrap"></div>
-</div>
+</div> -->
