putting pic + about me in div

--- a/index.html
+++ b/index.html
@@ -3,13 +3,27 @@ layout: home
 search_exclude: true
 image: images/logo.png
 ---
+<style>
+    .my_picture {
+        float: left;
+        border-radius: 50%;
+        padding: 12px;
+    }
+</style>
+
+<div>
+<img class="my_pictures", src="https://github.com/abauville/blog/raw/master/images/ID_pic.png" alt="That's my face" width="200">
+
+<h1>About me</h1>
 
 
-<img src="https://github.com/abauville/blog/raw/master/images/ID_pic.png" alt="That's my face" width="200" style="float: left;">
+<p>I am researcher in computation Earth sciences passionate about data science, machine learning, physics and simulations. I am currently living and working in Yokohama, Japan. For more details please have a look at my 
+    <a href="https://nbviewer.jupyter.org/github/abauville/blog/raw/master/images/Resume/Resume_Arthur_Bauville.pdf">resume</a>, 
+    or my 
+    <a href="https://abauville.github.io/blog/publications/">publications</a>.
+</p>
 
-# About me
-
-I am researcher in computation Earth sciences passionate about data science, machine learning, physics and simulations. I am currently living and working in Yokohama, Japan. For more details have a look at my [resume](https://nbviewer.jupyter.org/github/abauville/blog/raw/master/images/Resume/Resume_Arthur_Bauville.pdf), or my [publications]("https://abauville.github.io/blog/publications/").
+</div>
 
 
 # Data science projects
