deploy: bdc44bf5a4408388e7f10d852d146335ac3dd81e

--- a/index.html
+++ b/index.html
@@ -98,11 +98,27 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p><img src="https://github.com/abauville/blog/raw/master/images/ID_pic.png" alt="That's my face" width="200" style="float: left;" /></p>
+        <div class="home"><style>
+    .my_picture {
+        float: left;
+        border-radius: 50%;
+        padding: 12px;
+    }
+</style>
 
-<h1 id="about-me">About me</h1>
+<div>
+&lt;img class="my_pictures", src="https://github.com/abauville/blog/raw/master/images/ID_pic.png" alt="That's my face" width="200"&gt;
 
-<p>I am researcher in computation Earth sciences passionate about data science, machine learning, physics and simulations. I am currently living and working in Yokohama, Japan. For more details have a look at my <a href="https://nbviewer.jupyter.org/github/abauville/blog/raw/master/images/Resume/Resume_Arthur_Bauville.pdf">resume</a>, or my <a href="&quot;https://abauville.github.io/blog/publications/&quot;">publications</a>.</p>
+<h1>About me</h1>
+
+
+<p>I am researcher in computation Earth sciences passionate about data science, machine learning, physics and simulations. I am currently living and working in Yokohama, Japan. For more details please have a look at my 
+    <a href="https://nbviewer.jupyter.org/github/abauville/blog/raw/master/images/Resume/Resume_Arthur_Bauville.pdf">resume</a>, 
+    or my 
+    <a href="https://abauville.github.io/blog/publications/">publications</a>.
+</p>
+
+</div>
 
 <h1 id="data-science-projects">Data science projects</h1>
 
