deploy: 2eb1683b1d11274126ee69ef4568e4899cebcc49

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ window.onload = wrap_img;
 </style>
 
 <div>
-&lt;img class="my_picture", src="https://github.com/abauville/blog/raw/master/images/ID_pic.png" alt="That's my face" width="200"&gt;
+<img class="my_picture" src="https://github.com/abauville/blog/raw/master/images/ID_pic.png" alt="That's my face" width="200" />
 
 <h1>About me</h1>
 
