big update of main page and publications

--- a/index.html
+++ b/index.html
@@ -3,28 +3,36 @@ layout: home
 search_exclude: true
 image: images/logo.png
 ---
+
 <style>
     .my_picture {
         float: left;
-        border-radius: 50%;
-        padding: 22px;
+        
+        margin-right: 30px;
+        border-radius: 30%;
+    }
+
+    .social-media-icon {
+        width: 64px;
     }
 </style>
 
-<div>
-<img class="my_picture" src="https://github.com/abauville/blog/raw/master/images/ID_pic.png" alt="That's my face" width="200">
+
+
+<div style="overflow: hidden;">
+<img class="my_picture" src="https://github.com/abauville/blog/raw/master/images/ID_pic.png" alt="That's my face" width="220">
 
 <h1>About me</h1>
 
 
-<p>I am researcher in computation Earth sciences passionate about data science, machine learning, physics and simulations. I am currently living and working in Yokohama, Japan. For more details please have a look at my 
+<p>I am researcher in computational Earth sciences passionate about data science, machine learning, physics and simulations. I am currently living and working in Yokohama, Japan. For more details, please have a look at my 
     <a href="https://nbviewer.jupyter.org/github/abauville/blog/raw/master/images/Resume/Resume_Arthur_Bauville.pdf">resume</a>, 
     or my 
     <a href="https://abauville.github.io/blog/publications/">publications</a>.
 </p>
 
 </div>
-
+<hr>
 
 # Data science projects
 
@@ -40,6 +48,9 @@ image: images/logo.png
 
 # Social media
 
-[Github](https://github.com/abauville/), [LinkedIn](https://www.linkedin.com/in/arthur-bauville-a734871ba/), [Google scholar](https://scholar.google.com/citations?user=ebIAXVwAAAAJ&hl=en), [ResearchGate](https://www.researchgate.net/profile/Arthur_Bauville), [Medium](https://medium.com/@abauville)
+<img class="social-media-icon" src="/blog/assets/badges/social_media/github_256px.png" alt="link to github profile">
+<img class="social-media-icon" src="/blog/assets/badges/social_media/linkedin_256px.png" alt="link to linkedin profile">
+<img class="social-media-icon" src="/blog/assets/badges/social_media/google_scholar_256px.png" alt="link to google_scholar page">
+<img class="social-media-icon" src="/blog/assets/badges/social_media/researchgate_256px.png" alt="link to researchgate page">
 
 # Posts
