moved social media to about me section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@ image: images/logo.png
     }
 
     .social-media-icon {
-        width: 64px;
+        width: 48px;
+    }
+
+    .post-link, .post-meta-description, .post-meta {
+        margin-left: -75px;
+    }
+
+    .about-me {
+        margin-top: 0px !important;
     }
 </style>
 
@@ -22,14 +30,19 @@ image: images/logo.png
 <div style="overflow: hidden;">
 <img class="my_picture" src="https://github.com/abauville/blog/raw/master/images/ID_pic.png" alt="That's my face" width="220">
 
-<h1>About me</h1>
+<h1 class="about-me">About me</h1>
 
 
-<p>I am researcher in computational Earth sciences passionate about data science, machine learning, physics and simulations. I am currently living and working in Yokohama, Japan. For more details, please have a look at my 
+<p>I am researcher in computational Earth sciences passionate about data science, machine learning, physics and simulations. For more details, please have a look at my 
     <a href="https://nbviewer.jupyter.org/github/abauville/blog/raw/master/images/Resume/Resume_Arthur_Bauville.pdf">resume</a>, 
     or my 
     <a href="https://abauville.github.io/blog/publications/">publications</a>.
 </p>
+
+<img class="social-media-icon" src="/blog/assets/badges/social_media/github_256px.png" alt="link to github profile">
+<img class="social-media-icon" src="/blog/assets/badges/social_media/linkedin_256px.png" alt="link to linkedin profile">
+<img class="social-media-icon" src="/blog/assets/badges/social_media/google_scholar_256px.png" alt="link to google_scholar page">
+<img class="social-media-icon" src="/blog/assets/badges/social_media/researchgate_256px.png" alt="link to researchgate page">
 
 </div>
 <hr>
@@ -45,12 +58,5 @@ image: images/logo.png
 - [**CriticalTaper-utils**](https://github.com/abauville/CriticalTaper-utils): Python scripts to compute and visualize the solutions of the critical taper theory.
 - [**FortyTwoFEM**](https://github.com/abauville/FortyTwoFEM): A fluid mechanics solver based on the finite element method. Written in Matlab.
 - [**SPH_solver**](https://github.com/abauville/SPH_python_solver): a fluid dynamics solver based on the smoothed-particle hydrodynamics (SPH) method. Written in Python and optimized with Numba.
-
-# Social media
-
-<img class="social-media-icon" src="/blog/assets/badges/social_media/github_256px.png" alt="link to github profile">
-<img class="social-media-icon" src="/blog/assets/badges/social_media/linkedin_256px.png" alt="link to linkedin profile">
-<img class="social-media-icon" src="/blog/assets/badges/social_media/google_scholar_256px.png" alt="link to google_scholar page">
-<img class="social-media-icon" src="/blog/assets/badges/social_media/researchgate_256px.png" alt="link to researchgate page">
 
 # Posts
