deploy: 451ac6d9981b05268305e04c27fa9b2034c32e4e

--- a/index.html
+++ b/index.html
@@ -107,21 +107,34 @@ window.onload = wrap_img;
     }
 
     .social-media-icon {
-        width: 64px;
+        width: 48px;
+    }
+
+    .post-link, .post-meta-description, .post-meta {
+        margin-left: -75px;
+    }
+
+    .about-me {
+        margin-top: 0px !important;
     }
 </style>
 
 <div style="overflow: hidden;">
 <img class="my_picture" src="https://github.com/abauville/blog/raw/master/images/ID_pic.png" alt="That's my face" width="220" />
 
-<h1>About me</h1>
+<h1 class="about-me">About me</h1>
 
 
-<p>I am researcher in computational Earth sciences passionate about data science, machine learning, physics and simulations. I am currently living and working in Yokohama, Japan. For more details, please have a look at my 
+<p>I am researcher in computational Earth sciences passionate about data science, machine learning, physics and simulations. For more details, please have a look at my 
     <a href="https://nbviewer.jupyter.org/github/abauville/blog/raw/master/images/Resume/Resume_Arthur_Bauville.pdf">resume</a>, 
     or my 
     <a href="https://abauville.github.io/blog/publications/">publications</a>.
 </p>
+
+<img class="social-media-icon" src="/blog/assets/badges/social_media/github_256px.png" alt="link to github profile" />
+<img class="social-media-icon" src="/blog/assets/badges/social_media/linkedin_256px.png" alt="link to linkedin profile" />
+<img class="social-media-icon" src="/blog/assets/badges/social_media/google_scholar_256px.png" alt="link to google_scholar page" />
+<img class="social-media-icon" src="/blog/assets/badges/social_media/researchgate_256px.png" alt="link to researchgate page" />
 
 </div>
 <hr />
@@ -141,13 +154,6 @@ window.onload = wrap_img;
   <li><a href="https://github.com/abauville/FortyTwoFEM"><strong>FortyTwoFEM</strong></a>: A fluid mechanics solver based on the finite element method. Written in Matlab.</li>
   <li><a href="https://github.com/abauville/SPH_python_solver"><strong>SPH_solver</strong></a>: a fluid dynamics solver based on the smoothed-particle hydrodynamics (SPH) method. Written in Python and optimized with Numba.</li>
 </ul>
-
-<h1 id="social-media">Social media</h1>
-
-<p><img class="social-media-icon" src="/blog/assets/badges/social_media/github_256px.png" alt="link to github profile" />
-<img class="social-media-icon" src="/blog/assets/badges/social_media/linkedin_256px.png" alt="link to linkedin profile" />
-<img class="social-media-icon" src="/blog/assets/badges/social_media/google_scholar_256px.png" alt="link to google_scholar page" />
-<img class="social-media-icon" src="/blog/assets/badges/social_media/researchgate_256px.png" alt="link to researchgate page" /></p>
 
 <h1 id="posts">Posts</h1>
 
