remove the shift to psot-meta: was overlapping the picture on phone

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ image: images/logo.png
         width: 48px;
     }
 
-    .post-link, .post-meta-description, .post-meta {
+    /* .post-link, .post-meta-description, .post-meta {
         margin-left: -75px;
-    }
+    } */
 
     .about-me {
         margin-top: 0px !important;
