deploy: 9d84d364712a926c41fe34f052493aef0eb175cb

--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@ window.onload = wrap_img;
         width: 48px;
     }
 
-    .post-link, .post-meta-description, .post-meta {
+    /* .post-link, .post-meta-description, .post-meta {
         margin-left: -75px;
-    }
+    } */
 
     .about-me {
         margin-top: 0px !important;
