Added link to youtube

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ image: images/logo.png
 <img class="social-media-icon" src="/blog/assets/badges/social_media/linkedin_256px.png" alt="link to linkedin profile">
 <img class="social-media-icon" src="/blog/assets/badges/social_media/google_scholar_256px.png" alt="link to google_scholar page">
 <img class="social-media-icon" src="/blog/assets/badges/social_media/researchgate_256px.png" alt="link to researchgate page">
+<img class="social-media-icon" src="/blog/assets/badges/social_media/youtube_256px.png" alt="link to youtube page">
 
 </div>
 <hr>
