added links to social media images

--- a/index.html
+++ b/index.html
@@ -39,11 +39,26 @@ image: images/logo.png
     <a href="https://abauville.github.io/blog/publications/">publications</a>.
 </p>
 
-<img class="social-media-icon" src="/blog/assets/badges/social_media/github_256px.png" alt="link to github profile">
-<img class="social-media-icon" src="/blog/assets/badges/social_media/linkedin_256px.png" alt="link to linkedin profile">
-<img class="social-media-icon" src="/blog/assets/badges/social_media/google_scholar_256px.png" alt="link to google_scholar page">
-<img class="social-media-icon" src="/blog/assets/badges/social_media/researchgate_256px.png" alt="link to researchgate page">
-<img class="social-media-icon" src="/blog/assets/badges/social_media/youtube_256px.png" alt="link to youtube page">
+<a href="https://github.com/abauville/">
+    <img class="social-media-icon" src="/blog/assets/badges/social_media/github_256px.png" alt="link to github profile">
+</a>
+<a href="https://www.linkedin.com/in/arthur-bauville-a734871ba/">
+    <img class="social-media-icon" src="/blog/assets/badges/social_media/linkedin_256px.png" alt="link to linkedin profile">
+</a>
+<a href="https://scholar.google.ch/citations?user=ebIAXVwAAAAJ&hl=en">
+    <img class="social-media-icon" src="/blog/assets/badges/social_media/google_scholar_256px.png" alt="link to google_scholar page">
+</a>
+<a href="https://www.researchgate.net/profile/Arthur-Bauville">
+    <img class="social-media-icon" src="/blog/assets/badges/social_media/researchgate_256px.png" alt="link to researchgate page">
+</a>
+<a href="https://www.youtube.com/channel/UC1Yzte1DJEikveVubsefLHw">
+    <img class="social-media-icon" src="/blog/assets/badges/social_media/youtube_256px.png" alt="link to youtube page">
+</a>
+
+
+
+
+
 
 </div>
 <hr>
